stepper update and some other changes

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,12 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta property="og:title"
+    content="Flexiver: Fast On-Demand Delivery Service in Brisbane | Same-Day Courier Service" />
+  <meta name="keywords"
+    content=" On-demand delivery, Brisbane delivery service, Fast delivery service, Courier service Brisbane, Same-day delivery, Parcel delivery Brisbane, Flexiver delivery">
+  <meta name="description"
+    content="Flexiver offers lightning-fast on-demand delivery services in Brisbane. Get your parcels delivered securely and swiftly with our same-day courier service. Experience convenience like never before with Flexiver." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
